--- a/web/LavvieBot/en/css/style.css
+++ b/web/LavvieBot/en/css/style.css
@@ -410,9 +410,8 @@ h1 .bold {
 }
 
 .mid_panel {
-  height: 210px;
   background: #000;
-  padding-top: 51px;
+  padding: 51px;
   text-align: center;
 }
 .mid_panel h4 {
@@ -504,6 +503,14 @@ h1 .bold {
 #design4 img {
   width: 90%;
 }
+#design4 .rect_wrapper {
+  height: 50vw;
+}
+@media screen and (max-width:1300px){
+  #design4 .rect_wrapper {
+    height: 60vw;
+  }
+}
 #design5 .rect_wrapper:nth-child(1) {
   height: 45vw;
   padding: 2.5vw 0 0 80px;
@@ -545,7 +552,9 @@ h1 .bold {
 .margin_0 {
   margin: 0;
 }
-
+#litterbox2 .rect_wrapper{
+  height: 70vw;
+}
 #litterbox3 .rect_wrapper{
   height: auto;
 }
@@ -611,7 +620,7 @@ h1 .bold {
   background: url(../../img/purrsong/purrsong3-1.png);
   background-size: cover;
   background-repeat: no-repeat;
-  margin-top: 130px;
+  margin-top: 20%;
   margin-left: 50%;
 }
 
@@ -910,7 +919,6 @@ footer p {
 
   .mid_panel {
     padding-top: 30px;
-    height: 250px;
   }
   .mid_panel h4 {
     font-size: 20px;
@@ -934,9 +942,7 @@ footer p {
     font-size: 24px;
   }
 
-  #design1-1 {
-    height: 250px;
-  }
+
   #design4 img {
     width: 100%;
   }
